--- a/src/components/SliderTrips.css
+++ b/src/components/SliderTrips.css
@@ -1,5 +1,5 @@
 .trips_container {
-    width: 100vw;
+    width: 100%;
     height: 50vh;
     display: flex;
     flex-direction: column;
@@ -7,9 +7,9 @@
     margin-top: 4rem;
 }
 
-.swiper_container {
-    width: 100vw;
-}
+/* .swiper_container {
+    max-width: 100%;
+} */
 
 .trips_container h1 {
     text-align: center;
@@ -36,4 +36,7 @@
     align-items: center;
 }
 
-.swiper-wrapper {}
+.swiper_container {
+    width: 100%;
+    height: fit-content;
+}
