--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -3,11 +3,20 @@
     flex-direction: column;
     align-items: center;
     margin-top: 2rem;
+    padding-bottom: 4rem;
+
+    h1+p {
+        font-size: 1.2rem;
+        max-width: 80ch;
+        text-align: center;
+        font-weight: 480;
+    }
 }
 
 .last_trips {
-    width: 100vw;
+    width: 100%;
     margin-top: 4rem;
+    display: flex;
 }
 
 .last_trips p {
