--- a/src/components/SliderTrips.css
+++ b/src/components/SliderTrips.css
@@ -1,32 +1,44 @@
 .trips_container {
-    width: 100%;
+    width: 100vw;
     height: 50vh;
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     margin-top: 4rem;
 }
 
-/* .swiper_container {
-    max-width: 100%;
-} */
-
 .trips_container h1 {
     text-align: center;
-    padding-bottom: 2rem;
+    font-size: 25px;
+    color: white;
+    text-shadow: 2px 2px 2px #023347;
 }
+
+.trips_container h2 {
+    padding-top: 1.5rem;
+}
+
+.trips_container p {
+    font-size: 18px;
+}
+
 
 .trips_card {
     height: fit-content;
     display: flex;
     flex-direction: column;
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+    padding-right: 1rem;
+    padding-left: 1rem;
+    margin-top: 2rem;
 }
 
 .trip_img {
     width: 100%;
     height: 40vh;
+    border-radius: 10%;
+    border: solid 2px white;
+}
+
+.trip_img:hover {
+    transform: scale(1.1);
     border-radius: 10%;
 }
 
@@ -34,9 +46,4 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.swiper_container {
-    width: 100%;
-    height: fit-content;
 }
