--- a/src/components/LastTrips.css
+++ b/src/components/LastTrips.css
@@ -13,7 +13,6 @@
     color: #023347;
 }
 
-
 .last_trip_img {
     width: 25rem;
     height: 100%;
@@ -36,4 +35,23 @@
 .details {
     text-align: center;
     padding-bottom: 2rem;
+}
+
+@media screen and (max-width:900px) {
+
+    .last_trip_img {
+        width: 80%;
+        height: 30vh;
+    }
+
+    .last_trips_card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .last_trips_details {
+        gap: 5px;
+    }
+
 }
