--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -3,6 +3,7 @@ footer {
     bottom: 0;
     width: 100%;
     color: white;
+    margin-top: 2rem;
 }
 
 ul.footer-ul {
@@ -25,28 +26,5 @@ ul.footer-ul li {
 
     ul.footer-ul li {
         margin: 0.3rem;
-    }
-
-}
-
-
-
-/*footer {
-    width: 100%;
-    bottom: 0;
-    background-color: #023347;
-    color: white;
-    align-items: center;
-    padding: 2rem;
-
-    ul {
-        list-style-type: none;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-
-        li {
-            margin: 0 auto;
-        }
     }
 }
