--- a/src/pages/EventPage.css
+++ b/src/pages/EventPage.css
@@ -7,20 +7,29 @@
 h1 {
     padding-top: 2rem;
     text-align: center;
+    font-size: 3rem;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
+}
+
+h2 {
+    margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 .event_description {
     padding: 2rem;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: bold;
+    margin-bottom: 5rem;
 }
 
 .eventPage_container img {
     width: 25rem;
     height: 20rem;
-    margin: auto;
-    border-radius: 20px;
+    margin: 1rem;
+    border-radius: 1.25rem;
 }
 
 .equipement_fournis {
@@ -30,39 +39,49 @@ h1 {
 .img_container {
     display: flex;
     max-width: 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.img_container img {
+    width: 24rem;
 }
 
 .event_details_container {
     width: 100%;
     margin-top: 3rem;
-    padding-left: 3rem;
+    padding-left: 5rem;
     margin-bottom: 2rem;
 }
 
 .activity_container {
     display: flex;
-    height: 30rem;
+    height: fit-content;
     flex-direction: column;
     padding-left: 3rem;
     padding-right: 3rem;
+    background-color: #ebf0f3;
+    border-radius: 1.25rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 2rem;
 }
 
 .activity_details {
     display: flex;
-    flex-direction: wrap;
     justify-content: center;
     padding-left: 2rem;
     padding-right: 2rem;
     gap: 1rem;
     align-items: center;
     margin-bottom: 1.5rem;
-    ;
 }
 
 .activity_container img {
-    width: 25rem;
-    height: 10;
-    border-radius: 20px;
+    width: 22rem;
+    height: 15rem;
+    margin: 1rem;
+    border-radius: 1.25rem;
 }
 
 .details {
@@ -70,10 +89,52 @@ h1 {
 }
 
 .activity_title {
-    padding-top: 1.5rem;
     padding-bottom: 0.5rem;
 }
 
 .activity_desc {
     padding-bottom: 0.5rem;
+}
+
+@media (max-width: 900px) {
+    .img_container {
+        display: block;
+        margin: 0 auto;
+        flex-direction: column;
+        width: 80%;
+        justify-content: center;
+    }
+
+    .event_details_container {
+        padding-left: 3rem;
+    }
+
+    .eventPage_container img {
+        width: 100%;
+        height: 35vh;
+        margin: 1rem 0;
+    }
+
+    .activity_details img {
+        width: 60vw;
+        height: 24vh;
+        margin: 1rem 0;
+    }
+
+    .activity_main_title {
+        text-align: center;
+    }
+
+    .activity_details {
+        flex-direction: column;
+    }
+
+    .details {
+        margin-bottom: 1rem;
+    }
+
+    .activity_img {
+        width: 30%;
+        height: 20%;
+    }
 }
